--- a/contract prediction 2023.qmd
+++ b/contract prediction 2023.qmd
@@ -791,7 +791,7 @@ fit_y1_multinom=fit(wf,train_set)
 
 Let's get the most important variables of the multinomial model.
 
-```{r multinom_top_vars,echo=FALSE, fig.align='center',out.width="100%"}
+```{r multinom_y1_top_vars,echo=FALSE, fig.align='center',out.width="100%"}
 prettify_vip(fit_y1_multinom,"Multinomial Y1 Model Variable Importance")
 ```
 
@@ -808,7 +808,7 @@ tune_knn=wf %>% tune_grid(resamples=cv,
                         metrics=metric_set(macro_weight_f1))
 wf=wf %>% finalize_workflow(tune_knn %>% select_best())
 fit_y1_knn=fit(wf,train_set)
-tune_knn %>% select_best() %>% knitr::kable()
+tune_knn %>% select_best() %>% gt()
 ```
 
 The best knn model is near the upper limit of the tuning grid, taking into account 45 of the closest comparable players.
@@ -826,12 +826,12 @@ tune_tree=wf %>% tune_grid(resamples=cv,
                         metrics=metric_set(macro_weight_f1))
 wf=wf %>% finalize_workflow(tune_tree %>% select_best())
 fit_y1_tree=fit(wf,train_set)
-tune_tree %>% select_best() %>% knitr::kable()
+tune_tree %>% select_best() %>% gt()
 ```
 
 Let's get the most important variables of the decision_tree model.
 
-```{r decision_tree_top_vars,echo=FALSE, fig.align='center',out.width="100%"}
+```{r tree_y1_top_vars,echo=FALSE, fig.align='center',out.width="100%"}
 prettify_vip(fit_y1_tree,"Decision Tree Y1 Model Variable Importance")
 ```
 
@@ -870,10 +870,10 @@ tune_forest=wf %>% tune_grid(resamples=cv,
                         metrics=metric_set(macro_weight_f1))
 wf=wf %>% finalize_workflow(tune_forest %>% select_best())
 fit_y1_forest=fit(wf,train_set)
-tune_forest %>% select_best() %>% knitr::kable()
+tune_forest %>% select_best() %>% gt()
 ```
 
-```{r rand_forest_top_vars,echo=FALSE, fig.align='center',out.width="100%"}
+```{r forest_y1__top_vars,echo=FALSE, fig.align='center',out.width="100%"}
 prettify_vip(fit_y1_forest,"Random Forest Y1 Model Variable Importance")
 ```
 
@@ -898,7 +898,7 @@ tune_svm=wf %>% tune_grid(resamples=cv,
                         metrics=metric_set(macro_weight_f1))
 wf=wf %>% finalize_workflow(tune_svm %>% select_best())
 fit_y1_svm=fit(wf,train_set)
-tune_svm %>% select_best() %>% knitr::kable()
+tune_svm %>% select_best() %>% gt()
 ```
 
 Unfortunately, there is no concept of variable importance for an SVM model.
@@ -930,3 +930,83 @@ cv=vfold_cv(train_set_after_y1,v=10,strata=type,repeats=5)
 s2_recipe=recipe(first_year_percent_of_cap~.,data=train_set_after_y1) %>% 
   update_role(seas_id:player,new_role="id") %>% step_dummy(type)
 ```
+
+Now I can run through the models for salary using the predicted years as an input. The models I won't reuse are the multinomial model and the decision tree. The multinomial model is for classification only, while we are attempting to predict a continuous outcome in the first year salary as a percentage of the salary cap. We'll sub in a linear regression model as our new baseline. Since there's so many different salary percentages, a decision tree model would be useless or far too complicated.
+
+```{r lin_sal_dep}
+wf=workflow() %>% add_recipe(s2_recipe) %>% 
+  add_model(linear_reg() %>% 
+              set_engine("lm") %>% 
+              set_mode("regression"))
+tune_lin=wf %>% tune_grid(resamples=cv,metrics=metric_set(rmse,mae))
+wf=wf %>% finalize_workflow(tune_lin %>% select_best(metric="rmse"))
+fit_s2_lin=fit(wf,train_set_after_y1)
+```
+
+```{r lin_s2_top_vars,echo=FALSE, fig.align='center',out.width="100%"}
+prettify_vip(fit_s2_lin,"Linear S2 Model Variable Importance")
+```
+
+Contract years dwarf all other variables in terms of importance, with both versions of All-NBA share showing up in the top 10 (last-3-years showing up 2nd with contract-year farther down at number 8).
+
+```{r knn_sal_dep}
+wf=workflow() %>% add_recipe(s2_recipe) %>% 
+  add_model(nearest_neighbor(neighbors=tune()) %>% 
+              set_engine("kknn") %>% 
+              set_mode("regression"))
+tune_knn=wf %>% tune_grid(resamples=cv,
+                        grid=expand.grid(neighbors=5:50),
+                        metrics=metric_set(rmse,mae))
+wf=wf %>% finalize_workflow(tune_knn %>% select_best(metric="rmse"))
+fit_s2_knn=fit(wf,train_set_after_y1)
+tune_knn %>% select_best(metric="rmse") %>% gt()
+```
+
+The best knn salary model is around the middle of the tune grid, using 24 comparables.
+
+```{r forest_sal_dep}
+set.seed(100,sample.kind = "Rounding")
+wf=workflow() %>% add_recipe(s2_recipe) %>% 
+  add_model(rand_forest(mtry = tune()) %>% 
+  set_engine("ranger",importance="permutation") %>% set_mode("regression"))
+tune_forest=wf %>% tune_grid(resamples=cv,
+                        grid=expand.grid(mtry=5:10),
+                        metrics=metric_set(rmse,mae))
+wf=wf %>% finalize_workflow(tune_forest %>% select_best(metric="rmse"))
+fit_s2_forest=fit(wf,train_set_after_y1)
+tune_forest %>% select_best(metric="rmse") %>% gt()
+```
+
+```{r forest_s2_top_vars,echo=FALSE, fig.align='center',out.width="100%"}
+prettify_vip(fit_s2_forest,"Random Forest S2 Model Variable Importance")
+```
+
+Like the linear model, contract years are by far the most important variable in the random forest model, although not to the same extent.
+
+```{r svm_sal_dep}
+set.seed(100,sample.kind = "Rounding")
+wf=workflow() %>% add_recipe(s2_recipe) %>% 
+  add_model(svm_rbf(rbf_sigma=tune(),cost=tune()) %>% 
+  set_engine("kernlab") %>% set_mode("regression"))
+tune_svm=wf %>% tune_grid(resamples=cv,
+                        grid=expand.grid(rbf_sigma=0.1^seq(2:5),
+                                         cost=c(0.25,0.5,1)),
+                        metrics=metric_set(rmse,mae))
+wf=wf %>% finalize_workflow(tune_svm %>% select_best(metric="rmse"))
+fit_s2_svm=fit(wf,train_set_after_y1)
+tune_svm %>% select_best(metric="rmse") %>% gt()
+```
+
+Here are the performance metrics for the salary portion of the Y1S2 model.
+
+```{r s2_metrics,echo=FALSE}
+models<-get_sal_metrics(fit_s2_lin,"Linear",tune_lin,train_set_after_y1)
+models<-bind_rows(models,
+                  get_sal_metrics(fit_s2_knn,"KNN",tune_knn,train_set_after_y1),
+                  get_sal_metrics(fit_s2_forest,"Random Forest",tune_forest,
+                                  train_set_after_y1),
+                  get_sal_metrics(fit_s2_svm,"SVM",tune_svm,train_set_after_y1))
+gt(models)
+```
+
+Mean absolute error is the measure of the average difference between forecasts, while the residual mean squared error penalizes large errors. The random forest has the best RMSE, and also tops the leaderboard of maximizing predictions within 2% of actual value, and minimizing predictions that are more than 5% away. The KNN model has the worst RMSE, but still performs better on predictions than the linear model and the SVM model. With the SVM & random forest being so close in traditional metrics as well as the SVM being no slouch on dataset-specific metrics, we will take the mean of the SVM & random forest as our salary prediction in the Y1S2 model.
